<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Switch
        android:id="@+id/setting_activity_earnings_or_purchases_switch"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:text="@string/setting_activity_switcher_text"
        android:gravity="center">
    </Switch>

    <EditText
        android:id="@+id/setting_activity_name_editText"
        android:hint="@string/setting_activity_name_hint_message"
        android:inputType="textCapWords"
        android:textSize="15dp"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center">
    </EditText>
    <EditText
        android:id="@+id/setting_activity_type_editText"
        android:textSize="15dp"
        android:hint="@string/setting_activity_type_hint_message"
        android:inputType="textCapWords"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center">
    </EditText>
    <EditText
        android:id="@+id/setting_activity_cost_editText"
        android:textSize="15dp"
        android:hint="@string/setting_activity_cost_hint_message"
        android:inputType="numberDecimal"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center">
    </EditText>
    <EditText
        android:id="@+id/setting_activity_count_editText"
        android:textSize="15dp"
        android:hint="@string/setting_activity_count_hint_message"
        android:inputType="number"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center">
    </EditText>
    <EditText
        android:id="@+id/setting_activity_day_editText"
        android:textSize="15dp"
        android:hint="@string/setting_activity_day_hint_message"
        android:inputType="date"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center">
    </EditText>
    <EditText
        android:id="@+id/setting_activity_payment_type_editText"
        android:textSize="15dp"
        android:hint="@string/setting_activity_payment_type_hint_message"
        android:inputType="textCapCharacters"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center">
    </EditText>
    <Button
        android:id="@+id/setting_activity_set_button"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:text="@string/setting_activity_set_button_text">
    </Button>

</LinearLayout>