<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/action_choosing_activity_setting_activity_button_message"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center"
        android:text="@string/action_choosing_activity_setting_activity_button_message_text">
    </TextView>

    <Button
        android:id="@+id/action_choosing_activity_setting_activity_button"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:text="@string/action_choosing_activity_button_message">
    </Button>

    <TextView
        android:id="@+id/action_choosing_activity_watching_and_deleting_button_message_text"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:gravity="center"
        android:text="@string/action_choosing_activity_watching_and_deleting_button_message_text">
    </TextView>

    <Button
        android:id="@+id/action_choosing_activity_watching_and_deleting_activity_button"
        android:layout_height="50dp"
        android:layout_width="200dp"
        android:text="@string/action_choosing_activity_button_message">
    </Button>

</LinearLayout>